<resources>
    <string name="facebook_app_id">417594582296318</string>
    <string name="fb_login_protocol_scheme">fb417594582296318</string>


    <string name="app_name">AAA</string>
    <string name="title_activity_main2">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="categories">Категории</string>
    <string name="menu_news">Новости</string>
    <string name="products">Продукты</string>
    <string name="menu_stocks">Акции</string>
    <string name="menu_favorite">Любимые</string>
    <string name="menu_personal_cabinet">Личный кабинет</string>
    <string name="menu_purchase_history">История покупок</string>
    <string name="menu_chat">Чат</string>
    <string name="som">C</string>

    <!--Тестовые тексты ПОТОМ УДАЛИТЬ-->

    <string name="text_product_desc">О товаре
Бренд	Чистая Линия
Страна-производитель	Россия
Производитель	ООО "Чистая линия"
Состав	Молоко коровье цельное, сливки натуральные 40%, молоко сгущенное цельное с сахаром,
сахар-песок, сухой глюкозный сироп, молоко сухое обезжиренное, стабилизатор-эмульгатор
 (моно-и диглицериды жирных кислот, гу...
</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_payment">Имя</string>
    <string name="phone_payment">Телефон</string>
    <string name="address_payment">Адрес доставки</string>
    <string name="door_code">Код двери/домофона</string>
    <string name="additional_info">Дополнительная информация</string>
    <string name="date_payment">Выберите дату доставки</string>
    <string name="cart_payment">Оплата картой</string>
    <string name="cash_payment">Оплата наличными</string>
    <string name="description_payment">    Коммисия 3% от суммы транзакции</string>
    <string name="share_news">Поделиться новостью</string>
    <string name="added">добавлено</string>
    <string name="position_of_products">Количество товаров</string>
    <string name="all_sum">Сумма</string>
    <string name="price_figures">999</string>
    <string name="select">Выбрать</string>
    <string name="undo">Отмена</string>
    <string name="product_title">Мороженое Пломбир Чистая Линия ванильный, 450 г.</string>
    <string name="read_more">Узнать больше</string>
    <string name="basket">Корзина</string>
    <string name="edit_text_name">Имя*</string>
    <string name="username">Фамилия</string>
    <string name="hb">Дата рождения</string>
    <string name="registration_phone">Номер телефона*</string>
    <string name="registration_email">Email</string>
    <string name="registration_password">Пароль*</string>
    <string name="confirm_password">Подтверждение пароля*</string>
    <string name="text">*отмечены поля, обязательные к заполнению </string>
    <string name="confirm_phonenumber">Подтвердить номер телефона</string>
    <string name="or">или</string>

    <string name="dateerror">Enter a valid date</string>
    <string name="female">женский</string>
    <string name="male">мужской</string>
    <string name="confirm_phone_number">Подтвердить номер телефона</string>
    <string name="back">Назад</string>
    <string name="sumbit">Отправить</string>
    <string name="code_from_sms">Пожалуйста, введите ваш код из смс ниже:</string>
    <string name="code">Код из смс*</string>

    <string name="wrong_format">Не правильный формат</string>
    <string name="put_number">Введите номер</string>
    <string name="put_name">Введите имя</string>
    <string name="passwords_not_maches">Пароли не совпадают</string>
    <string name="cannot_be_empty">Не может быть пустым</string>
    <string name="default_web_client_id">Web client</string>
</resources>
