<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/code_from_sms"
        android:textColor="@color/less_black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/editCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_sms_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/code"
        android:padding="10dp"

        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorBorderGray" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/back"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sumbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/sumbit"

            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>